# StoryVepsianChronicle

./: .gitignore  CMakeLists.txt  README.md  abbrvnatmy.bst  annotation.tex  bibliography.bib  bibliography.tex  coordinates.tex  coordsvalues.tex  epilog.tex  lastpage.tex  main.tex  part1_annotation.tex  part1_chapter1.tex  part1_chapter10.tex  part1_chapter11.tex  part1_chapter12.tex  part1_chapter13.tex  part1_chapter14.tex  part1_chapter2.tex  part1_chapter4.tex  part1_chapter5.tex  part1_chapter6.tex  part1_chapter7.tex  part1_chapter8.tex  part1_chapter9.tex  part1_introduce.tex  part2.tex  part2_chapter10.tex  part2_chapter11.tex  part2_chapter14.tex  part2_chapter2.tex  part2_chapter3.tex  part2_chapter4.tex  part2_chapter5.tex  part2_chapter6.tex  part2_chapter7.tex  part2_chapter8.tex  part2_chapter9.tex  part2_introduce.tex  (+13 more)
воспоминания_о_школе/: джомолунгма.tex  митрич_и_циркуль.tex  профессура.tex
воспоминания_об_институте/: 16-я.tex  принем_принем.tex  спец.tex
горюн2016/: аннотация.tex  в_ожидании_дневки.tex  в_чагоде_год_спустя.tex  введение.tex  выброска.tex  джомолунгма.tex  заброска_микроавтобусом.tex  заключение.tex  команда.tex  поиски_дневки.tex  приготовления.tex  профессура.tex  проходим_устье_лиди.tex  пятый_дневной_переход.tex  снова_на_реку.tex  стапель.tex  урочище_лукобор.tex  целый_день_дождь.tex  часть2.tex
лидь2015/: аннотация.tex  байдарка.tex  введение.tex  возвращение.tex  вторая_дневка.tex  дозаправка_в_чагоде.tex  долгий_переход.tex  досрочный_антистапель.tex  заброска.tex  заключение.tex  кабаны_и_удача.tex  катастрофа.tex  маршрут_и_сборы.tex  несколько_слов_о_сплавах.tex  отъезд.tex  первая_дневка.tex  фонтан.tex  часть1.tex
лидь2017/: а_не_пошло_бы_все.tex  авантюра.tex  автовыброска.tex  автозаброска.tex  аннотация.tex  антистапель.tex  гэс.tex  дозаправка.tex  забелье.tex  заключение.tex  радогощь.tex  село_лидь.tex  третий_раз.tex  тургощь.tex  часть3.tex
песь2018/: аннотация.tex  раскрась_это_черным.tex  часть4.tex
чагодоща2019/: cold_as_ice.tex  аннотация.tex  часть5.tex
